<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StockActivity">

    <LinearLayout
        android:id="@+id/stockForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/stockFormTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/hello_blank_fragment"
            android:textAlignment="center"
            android:textSize="35sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="fill_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/productNameLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/productName"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/productNameDisplay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center_horizontal"
                android:inputType="textPersonName"
                android:text="@string/productName"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/deliveryDateLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:text="@string/deliveryDate"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/deliveryDateInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:gravity="center_horizontal"
                android:inputType="date"
                android:minHeight="48dp"
                android:text="@string/date" />

            <ImageButton
                android:id="@+id/calendarButton"
                android:layout_width="42dp"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:contentDescription="@string/deliveryDate"
                app:srcCompat="@drawable/ic_baseline_calendar_month_24" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/quantityLabel"
                android:layout_width="156dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/productQuantity"
                android:textSize="20dp"/>

            <EditText
                android:id="@+id/quantityInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:minHeight="48dp"
                android:text="@string/productQuantity"
                android:gravity="center_horizontal"/>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/submit"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/cancelButton"
                android:backgroundTint="@color/red"/>

            <Button
                android:id="@+id/cancelButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="220dp"
                android:layout_marginEnd="318dp"
                android:text="@string/cancel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/submitButton"
                app:layout_constraintStart_toStartOf="parent"
                android:backgroundTint="@color/gray"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>